further updates to dependencies